# pv-sizing

./: LICENSE.txt  README.md  launcher.py  requirements.txt  setup.cfg  setup.py  test.py
pv_dim/clases/: battery.py  pv.py
pv_dim/data/: load.csv
src/: battery.py  launcher.py  pv.py
src/classes/: battery.py  pv.py
src/data/: load.csv
src/pv_sizing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pv_sizing/app_layout/: applayout.py  dashboard.py  parsedata.py
src/pv_sizing/dimension/: battery.py  pv.py
src/pv_sizing/utils/: correct_data_experimental.py  load_example.py  pv_utils.py
src/pv_sizing/utils/example_data/: example_load.csv
src/pv_sizing/web_scrapping/: electricity_price.py  irradiance.py
utils/: constants.py  irradiance.py  pv_utils.py
