[metadata]
name = pv-sizing
version = 0.4
author = Kiril Ivanov Kurtev
description = Photovoltaic and battery sizing packages + economic analysis
long_description = file: README.md
url = https://github.com/brakisto/PV-sizing
keywords = photovoltaic sizing batteries financial analysis
[options]
python_requires = >=3.7, <4
install_requires = 
    pandas
[options.extras_require]
test = 
    pytest
    coverage
[options.package_data]
sample = 
    example_data.csv'